add new word funcionality

--- a/frontend-angular/src/app/category/category.component.html
+++ b/frontend-angular/src/app/category/category.component.html
@@ -15,6 +15,12 @@
     </div>
   </div>
 
+<button (click)="toggleAddWord()">Add word</button>
+
+<div *ngIf="showForm">
+    <app-add-word (closeModal)="toggleAddWord()" (newWord)="onNewWord($event)"></app-add-word>
+</div>
+
 <ng-template #noCat>
     No category
 </ng-template>
