test adding screenshots

--- a/frontend-angular/src/app/home/add-category/add-category.component.html
+++ b/frontend-angular/src/app/home/add-category/add-category.component.html
@@ -7,22 +7,22 @@
 
             <div>
                 <label for="categoryName">Description</label>
-                <input type="text" class="form-control" id="categoryName" placeholder="Enter category name" formControlName="description">
+                <input type="text" class="form-control" id="categoryName" placeholder="Enter category description" formControlName="description">
             </div>
 
             <div>
                 <label for="categoryName">Category</label>
-                <input type="text" class="form-control" id="categoryName" placeholder="Enter category name" formControlName="category">
+                <input type="text" class="form-control" id="categoryName" placeholder="Enter category" formControlName="category">
             </div>
 
             <div>
                 <label for="categoryName">Target audience</label>
-                <input type="text" class="form-control" id="categoryName" placeholder="Enter category name" formControlName="targetAudience">
+                <input type="text" class="form-control" id="categoryName" placeholder="Enter target audience" formControlName="targetAudience">
             </div>
 
             <div>
                 <label for="categoryName">difficulty level</label>
-                <input type="text" class="form-control" id="categoryName" placeholder="Enter category name" formControlName="difficultyLevel">
+                <input type="text" class="form-control" id="categoryName" placeholder="Enter difficulty level" formControlName="difficultyLevel">
             </div>
 
             <div>
